--- a/document-conventions/changelog.txt
+++ b/document-conventions/changelog.txt
@@ -4,7 +4,7 @@
 ==================================================================================================================================
 
 ? @author:                 William J. Horn
-? @document-name:          about-changelog.txt
+? @document-name:          changelog.txt
 ? @document-created:       02/19/2022
 ? @document-modified:      02/26/2022
 ? @document-version:       N/A
