--- a/document-conventions/changelog.txt
+++ b/document-conventions/changelog.txt
@@ -13,7 +13,7 @@
 
 ! This is the central updated version
 
-? @document-about
+? @document-info
 ====================
 | ABOUT CHANGE LOG |
 ==================================================================================================================================
